--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <div id="next-guess" class="grid"></div>
   <h2>Top 5:</h2>
   <div id="top5"></div>
-  <script src="wordleSolver.js"></script>
+  <script src="wordleSolver.js" defer></script>
 </body>
 </html>
