--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<body>
+  <h1>Wordle Solver</h1>
+
+  <!-- ADD THIS LINE: -->
+  <div id="error" style="color: red; font-weight: bold;"></div>
+
+  <button id="run">Next Guess</button>
+  …
 <script src="wordleSolver.js" defer></script>
