--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <body>
   <h1>Wordle Solver</h1>
-
-  <!-- ADD THIS LINE: -->
-  <div id="error" style="color: red; font-weight: bold;"></div>
-
+  <div id="error" style="color:red; font-weight:bold; margin-bottom:1rem;"></div>
   <button id="run">Next Guess</button>
 <script src="wordleSolver.js" defer></script>
