--- a/index.html
+++ b/index.html
@@ -1,5 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wordle Solver</title>
+  <style>
+    body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
+    h1, h2 { text-align: center; }
+    .row { margin-bottom: 1rem; }
+    .grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 0.25rem; margin-bottom: 0.5rem; }
+    input { width: 100%; height: 2rem; text-transform: uppercase; text-align: center; font-size: 1rem; }
+    button { display: block; margin: 1rem auto; padding: 0.5rem 1rem; font-size: 1rem; }
+    #next-guess span { display: inline-block; width: 2rem; height: 2rem; line-height: 2rem; margin: 0.25rem; border: 1px solid #999; text-align: center; font-size: 1.5rem; }
+    #top5 p { margin: 0.25rem 0; text-align: center; font-size: 1.2rem; }
+    #error { color: red; font-weight: bold; text-align: center; margin-bottom: 1rem; }
+  </style>
+</head>
 <body>
   <h1>Wordle Solver</h1>
-  <div id="error" style="color:red; font-weight:bold; margin-bottom:1rem;"></div>
+  <div id="error"></div>
+  <div id="rows">
+    <!-- Repeat this block for each guess (up to 6) -->
+    <div class="row">
+      <div class="grid">
+        <input class="guess" maxlength="1" placeholder="G" />
+        <input class="guess" maxlength="1" placeholder="G" />
+        <input class="guess" maxlength="1" placeholder="G" />
+        <input class="guess" maxlength="1" placeholder="G" />
+        <input class="guess" maxlength="1" placeholder="G" />
+      </div>
+      <div class="grid">
+        <input class="green" maxlength="1" placeholder="🟩" />
+        <input class="green" maxlength="1" placeholder="🟩" />
+        <input class="green" maxlength="1" placeholder="🟩" />
+        <input class="green" maxlength="1" placeholder="🟩" />
+        <input class="green" maxlength="1" placeholder="🟩" />
+      </div>
+      <div class="grid">
+        <input class="yellow" maxlength="1" placeholder="🟨" />
+        <input class="yellow" maxlength="1" placeholder="🟨" />
+        <input class="yellow" maxlength="1" placeholder="🟨" />
+        <input class="yellow" maxlength="1" placeholder="🟨" />
+        <input class="yellow" maxlength="1" placeholder="🟨" />
+      </div>
+    </div>
+    <!-- Copy the above .row block for additional guesses -->
+  </div>
   <button id="run">Next Guess</button>
-<script src="wordleSolver.js" defer></script>
+  <h2>Next Guess:</h2>
+  <div id="next-guess"></div>
+  <h2>Top 5:</h2>
+  <div id="top5"></div>
+  <script src="wordleSolver.js" defer></script>
+</body>
+</html>
