--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>Wordle Solver</h1>
   <div id="error"></div>
   <div id="rows">
-    <!-- Repeat this block for each guess (up to 6) -->
+    <!-- Predefined 6 guess rows -->
     <div class="row">
       <div class="grid">
         <input class="guess" maxlength="1" placeholder="G" />
@@ -44,7 +44,121 @@
         <input class="yellow" maxlength="1" placeholder="🟨" />
       </div>
     </div>
-    <!-- Copy the above .row block for additional guesses -->
+    <div class="row">
+      <div class="grid">
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid">
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid">
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid">
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="grid">
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+        <input class="guess" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+        <input class="green" maxlength="1" />
+      </div>
+      <div class="grid">
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+        <input class="yellow" maxlength="1" />
+      </div>
+    </div>
   </div>
   <button id="run">Next Guess</button>
   <h2>Next Guess:</h2>
