--- a/index.html
+++ b/index.html
@@ -2,78 +2,198 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordle Solver</title>
+  <script src="wordleSolver.js" defer></script>
   <style>
-    body { font-family: sans-serif; max-width: 900px; margin: 2rem auto; padding: 0 1rem; }
-    h1, h2 { text-align: center; }
-    table { border-collapse: collapse; margin: 1rem auto; }
-    table, th, td { border: 1px solid #666; }
-    th, td { padding: 0.25rem; text-align: center; }
-    input { width: 2rem; height: 2rem; text-transform: uppercase; text-align: center; font-size: 1rem; }
-    button { margin: 0.5rem; padding: 0.5rem 1rem; font-size: 1rem; }
-    #error { color: red; font-weight: bold; text-align: center; margin-bottom: 1rem; }
+    body { font-family: sans-serif; padding: 1em; }
+    table { border-collapse: collapse; margin-bottom: 1em; }
+    th, td { border: 1px solid #999; width: 2em; height: 2em; text-align: center; }
+    input { width: 100%; height: 100%; font-size: 1em; text-transform: uppercase; text-align: center; border: none; }
+    input[readonly] { background: #eef; }
+    .spacer { width: 1em; border: none; background: transparent; }
+    #solve-btn { padding: 0.5em 1em; font-size: 1em; }
+    #top5-table td input { background: #f8f8f8; }
   </style>
 </head>
 <body>
   <h1>Wordle Solver</h1>
-  <div id="error"></div>
 
-  <!-- Green Feedback -->
-  <h2>Green (correct spot)</h2>
-  <table id="greenTable">
-    <tbody>
-      <!-- 6 rows of 5 inputs -->
-      <tr><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td></tr>
-      <tr><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td></tr>
-      <tr><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td></tr>
-      <tr><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td></tr>
-      <tr><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td></tr>
-      <tr><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td><td><input class="green" maxlength="1"></td></tr>
-    </tbody>
-  </table>
-
-  <!-- Yellow Feedback -->
-  <h2>Yellow (wrong spot)</h2>
-  <table id="yellowTable">
-    <tbody>
-      <tr><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td></tr>
-      <tr><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td></tr>
-      <tr><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td></tr>
-      <tr><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td></tr>
-      <tr><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td></tr>
-      <tr><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td><td><input class="yellow" maxlength="1"></td></tr>
-    </tbody>
-  </table>
-
-  <!-- Action Buttons -->
-  <div style="text-align:center;">
-    <button id="guessBtn">GUESS</button>
-    <button id="clearBtn">CLEAR</button>
-  </div>
-
-  <!-- Guesses Table -->
-  <h2>Guesses</h2>
-  <table id="guessesTable">
+  <table id="wordle-table">
     <thead>
-      <tr><th>#</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th></tr>
+      <tr>
+        <th colspan="5">Green (Correct)</th>
+        <th class="spacer"></th>
+        <th colspan="5">Yellow (Present)</th>
+        <th class="spacer"></th>
+        <th colspan="5">Guess</th>
+      </tr>
     </thead>
     <tbody>
-      <!-- Populated by wordleSolver.js -->
+      <!-- Six rows for up to 6 guesses -->
+      <!-- Row 1 -->
+      <tr data-row="1">
+        <!-- Greens B–F -->
+        <td><input id="green-1-1" maxlength="1"></td>
+        <td><input id="green-1-2" maxlength="1"></td>
+        <td><input id="green-1-3" maxlength="1"></td>
+        <td><input id="green-1-4" maxlength="1"></td>
+        <td><input id="green-1-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <!-- Yellows H–L -->
+        <td><input id="yellow-1-1" maxlength="1"></td>
+        <td><input id="yellow-1-2" maxlength="1"></td>
+        <td><input id="yellow-1-3" maxlength="1"></td>
+        <td><input id="yellow-1-4" maxlength="1"></td>
+        <td><input id="yellow-1-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <!-- Guess N–R -->
+        <td><input id="guess-1-1" maxlength="1" readonly></td>
+        <td><input id="guess-1-2" maxlength="1" readonly></td>
+        <td><input id="guess-1-3" maxlength="1" readonly></td>
+        <td><input id="guess-1-4" maxlength="1" readonly></td>
+        <td><input id="guess-1-5" maxlength="1" readonly></td>
+      </tr>
+      <!-- Rows 2–6 (copy of row 1, just update data-row and ids) -->
+      <tr data-row="2">
+        <td><input id="green-2-1" maxlength="1"></td>
+        <td><input id="green-2-2" maxlength="1"></td>
+        <td><input id="green-2-3" maxlength="1"></td>
+        <td><input id="green-2-4" maxlength="1"></td>
+        <td><input id="green-2-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="yellow-2-1" maxlength="1"></td>
+        <td><input id="yellow-2-2" maxlength="1"></td>
+        <td><input id="yellow-2-3" maxlength="1"></td>
+        <td><input id="yellow-2-4" maxlength="1"></td>
+        <td><input id="yellow-2-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="guess-2-1" maxlength="1" readonly></td>
+        <td><input id="guess-2-2" maxlength="1" readonly></td>
+        <td><input id="guess-2-3" maxlength="1" readonly></td>
+        <td><input id="guess-2-4" maxlength="1" readonly></td>
+        <td><input id="guess-2-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-row="3">
+        <td><input id="green-3-1" maxlength="1"></td>
+        <td><input id="green-3-2" maxlength="1"></td>
+        <td><input id="green-3-3" maxlength="1"></td>
+        <td><input id="green-3-4" maxlength="1"></td>
+        <td><input id="green-3-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="yellow-3-1" maxlength="1"></td>
+        <td><input id="yellow-3-2" maxlength="1"></td>
+        <td><input id="yellow-3-3" maxlength="1"></td>
+        <td><input id="yellow-3-4" maxlength="1"></td>
+        <td><input id="yellow-3-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="guess-3-1" maxlength="1" readonly></td>
+        <td><input id="guess-3-2" maxlength="1" readonly></td>
+        <td><input id="guess-3-3" maxlength="1" readonly></td>
+        <td><input id="guess-3-4" maxlength="1" readonly></td>
+        <td><input id="guess-3-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-row="4">
+        <td><input id="green-4-1" maxlength="1"></td>
+        <td><input id="green-4-2" maxlength="1"></td>
+        <td><input id="green-4-3" maxlength="1"></td>
+        <td><input id="green-4-4" maxlength="1"></td>
+        <td><input id="green-4-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="yellow-4-1" maxlength="1"></td>
+        <td><input id="yellow-4-2" maxlength="1"></td>
+        <td><input id="yellow-4-3" maxlength="1"></td>
+        <td><input id="yellow-4-4" maxlength="1"></td>
+        <td><input id="yellow-4-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="guess-4-1" maxlength="1" readonly></td>
+        <td><input id="guess-4-2" maxlength="1" readonly></td>
+        <td><input id="guess-4-3" maxlength="1" readonly></td>
+        <td><input id="guess-4-4" maxlength="1" readonly></td>
+        <td><input id="guess-4-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-row="5">
+        <td><input id="green-5-1" maxlength="1"></td>
+        <td><input id="green-5-2" maxlength="1"></td>
+        <td><input id="green-5-3" maxlength="1"></td>
+        <td><input id="green-5-4" maxlength="1"></td>
+        <td><input id="green-5-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="yellow-5-1" maxlength="1"></td>
+        <td><input id="yellow-5-2" maxlength="1"></td>
+        <td><input id="yellow-5-3" maxlength="1"></td>
+        <td><input id="yellow-5-4" maxlength="1"></td>
+        <td><input id="yellow-5-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="guess-5-1" maxlength="1" readonly></td>
+        <td><input id="guess-5-2" maxlength="1" readonly></td>
+        <td><input id="guess-5-3" maxlength="1" readonly></td>
+        <td><input id="guess-5-4" maxlength="1" readonly></td>
+        <td><input id="guess-5-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-row="6">
+        <td><input id="green-6-1" maxlength="1"></td>
+        <td><input id="green-6-2" maxlength="1"></td>
+        <td><input id="green-6-3" maxlength="1"></td>
+        <td><input id="green-6-4" maxlength="1"></td>
+        <td><input id="green-6-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="yellow-6-1" maxlength="1"></td>
+        <td><input id="yellow-6-2" maxlength="1"></td>
+        <td><input id="yellow-6-3" maxlength="1"></td>
+        <td><input id="yellow-6-4" maxlength="1"></td>
+        <td><input id="yellow-6-5" maxlength="1"></td>
+        <td class="spacer"></td>
+        <td><input id="guess-6-1" maxlength="1" readonly></td>
+        <td><input id="guess-6-2" maxlength="1" readonly></td>
+        <td><input id="guess-6-3" maxlength="1" readonly></td>
+        <td><input id="guess-6-4" maxlength="1" readonly></td>
+        <td><input id="guess-6-5" maxlength="1" readonly></td>
+      </tr>
     </tbody>
   </table>
 
-  <!-- Next 4 Guesses -->
-  <h2>Next 4 Guesses</h2>
-  <table id="nextTable">
-    <thead>
-      <tr><th>#</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th></tr>
-    </thead>
+  <button id="solve-btn">Solve</button>
+
+  <h2>Top 5 Guesses</h2>
+  <table id="top5-table">
     <tbody>
-      <!-- Populated by wordleSolver.js -->
+      <!-- Five rows for top-5 -->
+      <tr data-index="1">
+        <td><input id="top1-1" maxlength="1" readonly></td>
+        <td><input id="top1-2" maxlength="1" readonly></td>
+        <td><input id="top1-3" maxlength="1" readonly></td>
+        <td><input id="top1-4" maxlength="1" readonly></td>
+        <td><input id="top1-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-index="2">
+        <td><input id="top2-1" maxlength="1" readonly></td>
+        <td><input id="top2-2" maxlength="1" readonly></td>
+        <td><input id="top2-3" maxlength="1" readonly></td>
+        <td><input id="top2-4" maxlength="1" readonly></td>
+        <td><input id="top2-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-index="3">
+        <td><input id="top3-1" maxlength="1" readonly></td>
+        <td><input id="top3-2" maxlength="1" readonly></td>
+        <td><input id="top3-3" maxlength="1" readonly></td>
+        <td><input id="top3-4" maxlength="1" readonly></td>
+        <td><input id="top3-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-index="4">
+        <td><input id="top4-1" maxlength="1" readonly></td>
+        <td><input id="top4-2" maxlength="1" readonly></td>
+        <td><input id="top4-3" maxlength="1" readonly></td>
+        <td><input id="top4-4" maxlength="1" readonly></td>
+        <td><input id="top4-5" maxlength="1" readonly></td>
+      </tr>
+      <tr data-index="5">
+        <td><input id="top5-1" maxlength="1" readonly></td>
+        <td><input id="top5-2" maxlength="1" readonly></td>
+        <td><input id="top5-3" maxlength="1" readonly></td>
+        <td><input id="top5-4" maxlength="1" readonly></td>
+        <td><input id="top5-5" maxlength="1" readonly></td>
+      </tr>
     </tbody>
   </table>
-
-  <script src="wordleSolver.js" defer></script>
 </body>
 </html>
