--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
     input { width: 100%; height: 100%; font-size: 1em; text-transform: uppercase; text-align: center; border: none; }
     input[readonly] { background: #eef; }
     .spacer { width: 1em; border: none; background: transparent; }
-    #solve-btn { padding: 0.5em 1em; font-size: 1em; }
+    #guess-btn { padding: 0.5em 1em; font-size: 1em; }
     #top5-table td input { background: #f8f8f8; }
   </style>
 </head>
@@ -29,31 +30,27 @@
       </tr>
     </thead>
     <tbody>
-      <!-- Six rows for up to 6 guesses -->
       <!-- Row 1 -->
       <tr data-row="1">
-        <!-- Greens B–F -->
         <td><input id="green-1-1" maxlength="1"></td>
         <td><input id="green-1-2" maxlength="1"></td>
         <td><input id="green-1-3" maxlength="1"></td>
         <td><input id="green-1-4" maxlength="1"></td>
         <td><input id="green-1-5" maxlength="1"></td>
         <td class="spacer"></td>
-        <!-- Yellows H–L -->
         <td><input id="yellow-1-1" maxlength="1"></td>
         <td><input id="yellow-1-2" maxlength="1"></td>
         <td><input id="yellow-1-3" maxlength="1"></td>
         <td><input id="yellow-1-4" maxlength="1"></td>
         <td><input id="yellow-1-5" maxlength="1"></td>
         <td class="spacer"></td>
-        <!-- Guess N–R -->
         <td><input id="guess-1-1" maxlength="1" readonly></td>
         <td><input id="guess-1-2" maxlength="1" readonly></td>
         <td><input id="guess-1-3" maxlength="1" readonly></td>
         <td><input id="guess-1-4" maxlength="1" readonly></td>
         <td><input id="guess-1-5" maxlength="1" readonly></td>
       </tr>
-      <!-- Rows 2–6 (copy of row 1, just update data-row and ids) -->
+      <!-- Row 2 -->
       <tr data-row="2">
         <td><input id="green-2-1" maxlength="1"></td>
         <td><input id="green-2-2" maxlength="1"></td>
@@ -73,6 +70,7 @@
         <td><input id="guess-2-4" maxlength="1" readonly></td>
         <td><input id="guess-2-5" maxlength="1" readonly></td>
       </tr>
+      <!-- Row 3 -->
       <tr data-row="3">
         <td><input id="green-3-1" maxlength="1"></td>
         <td><input id="green-3-2" maxlength="1"></td>
@@ -92,6 +90,7 @@
         <td><input id="guess-3-4" maxlength="1" readonly></td>
         <td><input id="guess-3-5" maxlength="1" readonly></td>
       </tr>
+      <!-- Row 4 -->
       <tr data-row="4">
         <td><input id="green-4-1" maxlength="1"></td>
         <td><input id="green-4-2" maxlength="1"></td>
@@ -111,6 +110,7 @@
         <td><input id="guess-4-4" maxlength="1" readonly></td>
         <td><input id="guess-4-5" maxlength="1" readonly></td>
       </tr>
+      <!-- Row 5 -->
       <tr data-row="5">
         <td><input id="green-5-1" maxlength="1"></td>
         <td><input id="green-5-2" maxlength="1"></td>
@@ -130,6 +130,7 @@
         <td><input id="guess-5-4" maxlength="1" readonly></td>
         <td><input id="guess-5-5" maxlength="1" readonly></td>
       </tr>
+      <!-- Row 6 -->
       <tr data-row="6">
         <td><input id="green-6-1" maxlength="1"></td>
         <td><input id="green-6-2" maxlength="1"></td>
@@ -152,12 +153,11 @@
     </tbody>
   </table>
 
-  <button id="solve-btn">Solve</button>
+  <button id="guess-btn">Guess</button>
 
   <h2>Top 5 Guesses</h2>
   <table id="top5-table">
     <tbody>
-      <!-- Five rows for top-5 -->
       <tr data-index="1">
         <td><input id="top1-1" maxlength="1" readonly></td>
         <td><input id="top1-2" maxlength="1" readonly></td>
@@ -197,3 +197,4 @@
   </table>
 </body>
 </html>
+```
