--- a/index.html
+++ b/index.html
@@ -2,197 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordle Solver</title>
-  <script src="wordleSolver.js" defer></script>
-  <style>
-    body { font-family: sans-serif; padding: 1em; }
-    table { border-collapse: collapse; margin-bottom: 1em; }
-    th, td { border: 1px solid #999; width: 2em; height: 2em; text-align: center; }
-    input { width: 100%; height: 100%; font-size: 1em; text-transform: uppercase; text-align: center; border: none; }
-    input[readonly] { background: #eef; }
-    .spacer { width: 1em; border: none; background: transparent; }
-    #guess-btn { padding: 0.5em 1em; font-size: 1em; }
-    #top5-table td input { background: #f8f8f8; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Wordle Solver</h1>
-
-  <table id="wordle-table">
-    <thead>
-      <tr>
-        <th colspan="5">Green (Correct)</th>
-        <th class="spacer"></th>
-        <th colspan="5">Yellow (Present)</th>
-        <th class="spacer"></th>
-        <th colspan="5">Guess</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Row 1 -->
-      <tr data-row="1">
-        <td><input id="green-1-1" maxlength="1"></td>
-        <td><input id="green-1-2" maxlength="1"></td>
-        <td><input id="green-1-3" maxlength="1"></td>
-        <td><input id="green-1-4" maxlength="1"></td>
-        <td><input id="green-1-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="yellow-1-1" maxlength="1"></td>
-        <td><input id="yellow-1-2" maxlength="1"></td>
-        <td><input id="yellow-1-3" maxlength="1"></td>
-        <td><input id="yellow-1-4" maxlength="1"></td>
-        <td><input id="yellow-1-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="guess-1-1" maxlength="1" readonly></td>
-        <td><input id="guess-1-2" maxlength="1" readonly></td>
-        <td><input id="guess-1-3" maxlength="1" readonly></td>
-        <td><input id="guess-1-4" maxlength="1" readonly></td>
-        <td><input id="guess-1-5" maxlength="1" readonly></td>
-      </tr>
-      <!-- Row 2 -->
-      <tr data-row="2">
-        <td><input id="green-2-1" maxlength="1"></td>
-        <td><input id="green-2-2" maxlength="1"></td>
-        <td><input id="green-2-3" maxlength="1"></td>
-        <td><input id="green-2-4" maxlength="1"></td>
-        <td><input id="green-2-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="yellow-2-1" maxlength="1"></td>
-        <td><input id="yellow-2-2" maxlength="1"></td>
-        <td><input id="yellow-2-3" maxlength="1"></td>
-        <td><input id="yellow-2-4" maxlength="1"></td>
-        <td><input id="yellow-2-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="guess-2-1" maxlength="1" readonly></td>
-        <td><input id="guess-2-2" maxlength="1" readonly></td>
-        <td><input id="guess-2-3" maxlength="1" readonly></td>
-        <td><input id="guess-2-4" maxlength="1" readonly></td>
-        <td><input id="guess-2-5" maxlength="1" readonly></td>
-      </tr>
-      <!-- Row 3 -->
-      <tr data-row="3">
-        <td><input id="green-3-1" maxlength="1"></td>
-        <td><input id="green-3-2" maxlength="1"></td>
-        <td><input id="green-3-3" maxlength="1"></td>
-        <td><input id="green-3-4" maxlength="1"></td>
-        <td><input id="green-3-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="yellow-3-1" maxlength="1"></td>
-        <td><input id="yellow-3-2" maxlength="1"></td>
-        <td><input id="yellow-3-3" maxlength="1"></td>
-        <td><input id="yellow-3-4" maxlength="1"></td>
-        <td><input id="yellow-3-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="guess-3-1" maxlength="1" readonly></td>
-        <td><input id="guess-3-2" maxlength="1" readonly></td>
-        <td><input id="guess-3-3" maxlength="1" readonly></td>
-        <td><input id="guess-3-4" maxlength="1" readonly></td>
-        <td><input id="guess-3-5" maxlength="1" readonly></td>
-      </tr>
-      <!-- Row 4 -->
-      <tr data-row="4">
-        <td><input id="green-4-1" maxlength="1"></td>
-        <td><input id="green-4-2" maxlength="1"></td>
-        <td><input id="green-4-3" maxlength="1"></td>
-        <td><input id="green-4-4" maxlength="1"></td>
-        <td><input id="green-4-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="yellow-4-1" maxlength="1"></td>
-        <td><input id="yellow-4-2" maxlength="1"></td>
-        <td><input id="yellow-4-3" maxlength="1"></td>
-        <td><input id="yellow-4-4" maxlength="1"></td>
-        <td><input id="yellow-4-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="guess-4-1" maxlength="1" readonly></td>
-        <td><input id="guess-4-2" maxlength="1" readonly></td>
-        <td><input id="guess-4-3" maxlength="1" readonly></td>
-        <td><input id="guess-4-4" maxlength="1" readonly></td>
-        <td><input id="guess-4-5" maxlength="1" readonly></td>
-      </tr>
-      <!-- Row 5 -->
-      <tr data-row="5">
-        <td><input id="green-5-1" maxlength="1"></td>
-        <td><input id="green-5-2" maxlength="1"></td>
-        <td><input id="green-5-3" maxlength="1"></td>
-        <td><input id="green-5-4" maxlength="1"></td>
-        <td><input id="green-5-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="yellow-5-1" maxlength="1"></td>
-        <td><input id="yellow-5-2" maxlength="1"></td>
-        <td><input id="yellow-5-3" maxlength="1"></td>
-        <td><input id="yellow-5-4" maxlength="1"></td>
-        <td><input id="yellow-5-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="guess-5-1" maxlength="1" readonly></td>
-        <td><input id="guess-5-2" maxlength="1" readonly></td>
-        <td><input id="guess-5-3" maxlength="1" readonly></td>
-        <td><input id="guess-5-4" maxlength="1" readonly></td>
-        <td><input id="guess-5-5" maxlength="1" readonly></td>
-      </tr>
-      <!-- Row 6 -->
-      <tr data-row="6">
-        <td><input id="green-6-1" maxlength="1"></td>
-        <td><input id="green-6-2" maxlength="1"></td>
-        <td><input id="green-6-3" maxlength="1"></td>
-        <td><input id="green-6-4" maxlength="1"></td>
-        <td><input id="green-6-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="yellow-6-1" maxlength="1"></td>
-        <td><input id="yellow-6-2" maxlength="1"></td>
-        <td><input id="yellow-6-3" maxlength="1"></td>
-        <td><input id="yellow-6-4" maxlength="1"></td>
-        <td><input id="yellow-6-5" maxlength="1"></td>
-        <td class="spacer"></td>
-        <td><input id="guess-6-1" maxlength="1" readonly></td>
-        <td><input id="guess-6-2" maxlength="1" readonly></td>
-        <td><input id="guess-6-3" maxlength="1" readonly></td>
-        <td><input id="guess-6-4" maxlength="1" readonly></td>
-        <td><input id="guess-6-5" maxlength="1" readonly></td>
-      </tr>
-    </tbody>
+  <table id="guess-table">
+    <thead><tr><th>Guess</th><th colspan="5">Letters</th></tr></thead>
+    <tbody><tr id="row-1"><td>1</td><td colspan="5" id="first-guess"></td></tr></tbody>
   </table>
 
-  <button id="guess-btn">Guess</button>
+  <form id="feedback-form">
+    <h2>Feedback</h2>
+    <table id="yellow-table">
+      <caption>Yellow</caption>
+      <tbody>
+        <!-- 6 rows × 5 cols input -->
+      </tbody>
+    </table>
+    <table id="green-table">
+      <caption>Green</caption>
+      <tbody>
+        <!-- 6 rows × 5 cols input -->
+      </tbody>
+    </table>
+    <button type="submit">Next Guess</button>
+  </form>
 
-  <h2>Top 5 Guesses</h2>
-  <table id="top5-table">
-    <tbody>
-      <tr data-index="1">
-        <td><input id="top1-1" maxlength="1" readonly></td>
-        <td><input id="top1-2" maxlength="1" readonly></td>
-        <td><input id="top1-3" maxlength="1" readonly></td>
-        <td><input id="top1-4" maxlength="1" readonly></td>
-        <td><input id="top1-5" maxlength="1" readonly></td>
-      </tr>
-      <tr data-index="2">
-        <td><input id="top2-1" maxlength="1" readonly></td>
-        <td><input id="top2-2" maxlength="1" readonly></td>
-        <td><input id="top2-3" maxlength="1" readonly></td>
-        <td><input id="top2-4" maxlength="1" readonly></td>
-        <td><input id="top2-5" maxlength="1" readonly></td>
-      </tr>
-      <tr data-index="3">
-        <td><input id="top3-1" maxlength="1" readonly></td>
-        <td><input id="top3-2" maxlength="1" readonly></td>
-        <td><input id="top3-3" maxlength="1" readonly></td>
-        <td><input id="top3-4" maxlength="1" readonly></td>
-        <td><input id="top3-5" maxlength="1" readonly></td>
-      </tr>
-      <tr data-index="4">
-        <td><input id="top4-1" maxlength="1" readonly></td>
-        <td><input id="top4-2" maxlength="1" readonly></td>
-        <td><input id="top4-3" maxlength="1" readonly></td>
-        <td><input id="top4-4" maxlength="1" readonly></td>
-        <td><input id="top4-5" maxlength="1" readonly></td>
-      </tr>
-      <tr data-index="5">
-        <td><input id="top5-1" maxlength="1" readonly></td>
-        <td><input id="top5-2" maxlength="1" readonly></td>
-        <td><input id="top5-3" maxlength="1" readonly></td>
-        <td><input id="top5-4" maxlength="1" readonly></td>
-        <td><input id="top5-5" maxlength="1" readonly></td>
-      </tr>
-    </tbody>
-  </table>
+  <script src="script.js"></script>
 </body>
 </html>
