--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <button type="submit">Next Guess</button>
   </form>
 
-  <script src="script.js"></script>
+  <script type="module" src="wordleSolver.js"></script>
 </body>
 </html>
